; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/misc/extr_ufm.c_ufm_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/misc/extr_ufm.c_ufm_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ufm_softc = type { i32 }

@UFM_CMD0 = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@UFM_CMD2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ufm_softc*, i8*)* @ufm_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ufm_stop(%struct.ufm_softc* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ufm_softc*, align 8
  %5 = alloca i8*, align 8
  store %struct.ufm_softc* %0, %struct.ufm_softc** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.ufm_softc*, %struct.ufm_softc** %4, align 8
  %7 = load i32, i32* @UFM_CMD0, align 4
  %8 = call i64 @ufm_do_req(%struct.ufm_softc* %6, i32 %7, i32 22, i32 28, i32* null)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @EIO, align 4
  store i32 %11, i32* %3, align 4
  br label %20

12:                                               ; preds = %2
  %13 = load %struct.ufm_softc*, %struct.ufm_softc** %4, align 8
  %14 = load i32, i32* @UFM_CMD2, align 4
  %15 = call i64 @ufm_do_req(%struct.ufm_softc* %13, i32 %14, i32 0, i32 0, i32* null)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i32, i32* @EIO, align 4
  store i32 %18, i32* %3, align 4
  br label %20

19:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %17, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @ufm_do_req(%struct.ufm_softc*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
